Project satellite_database_v2 {
  database_type: 'PostgreSQL'
  Note: 'Satellite Industry Database V2. Examples in notes show expected data shape for expert entry.'
}

Enum visibility_level {
  public
  internal
  confidential
  restricted
}

Enum review_status {
  draft
  pending_review
  published
  retired
}

Enum ownership_type {
  Local
  Foreign
  JV
}

Enum value_chain_stage {
  Upstream
  Midstream
  Downstream
}

Enum technology_intensity {
  Low
  Medium
  High
}

Enum linkage_type {
  Supplier
  Buyer
  Partner
}

Enum domestic_or_import {
  Domestic
  Import
}

Enum partner_type {
  University
  PRI
  Association
}

Enum collaboration_type {
  "R&D"
  Training
  Testing
}

Enum role_type {
  Public
  Analyst
  Admin
}

Enum audit_action {
  create
  update
  delete
  import
  reset
  wipe
}

Table data_sources {
  source_id text [pk, note: 'Example S001']
  name text [not null, note: 'Example Department of Business Development']
  url text [note: 'Example https://datawarehouse.dbd.go.th']
  owner text [note: 'Example DBD']
  last_synced date [note: 'Example 2025-09-30']
  notes text [note: 'Example Company registration master']
  visibility_level visibility_level [not null, default: 'internal']
  review_status review_status [not null, default: 'draft']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table firms {
  firm_id text [pk, note: 'Example F001']
  firm_name text [not null, note: 'Example AstroLink Aerospace']
  registration_no text [unique, note: 'Example 0105561000011']
  year_established integer [note: 'Example 2014']
  ownership_type ownership_type [note: 'Example Local']
  parent_company text [note: 'Example OrbitForge Holdings']
  industry_code text [note: 'Example ISIC-3030']
  province text [note: 'Example Bangkok']
  industrial_zone text [note: 'Example Eastern Economic Corridor']
  website text [note: 'Example https://astrolink.example.th']
  contact_email text [note: 'Example info@astrolink.example.th']
  source_id text [ref: > data_sources.source_id, note: 'Example S001']
  visibility_level visibility_level [not null, default: 'internal']
  review_status review_status [not null, default: 'draft']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table firm_size_finance {
  firm_id text [pk, ref: > firms.firm_id, note: 'Example F001']
  employees_total integer [not null, default: 0, note: 'Example 180']
  engineers integer [not null, default: 0, note: 'Example 95']
  annual_revenue_mthb numeric(14,2) [not null, default: 0, note: 'Example 420.00']
  export_percentage numeric(5,2) [not null, default: 0, note: 'Example 35.00']
  production_capacity text [note: 'Example 2 satellites/year']
  capital_investment_mthb numeric(14,2) [not null, default: 0, note: 'Example 850.00']
  gov_incentives text [note: 'Example BOI 8-year tax holiday']
  funding_access text [note: 'Example NIA SME grant']
  offset_agreement text [note: 'Example Defense offset 2022']
  source_id text [ref: > data_sources.source_id, note: 'Example S004']
  visibility_level visibility_level [not null, default: 'internal']
  review_status review_status [not null, default: 'draft']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table products_services {
  product_id text [pk, note: 'Example P001']
  firm_id text [not null, ref: > firms.firm_id, note: 'Example F001']
  product_name text [not null, note: 'Example Small Earth-Observation Satellite Bus']
  value_chain_stage value_chain_stage [not null, note: 'Example Upstream']
  technology_intensity technology_intensity [not null, note: 'Example High']
  main_market text [note: 'Example Domestic + ASEAN']
  certification text [note: 'Example AS9100']
  sia_category text [note: 'Example Satellite Manufacturing']
  itu_service_class text [note: 'Example EESS']
  orbit_type text [note: 'Example LEO']
  frequency_band text [note: 'Example Ku']
  naics_code text [note: 'Example 336414']
  hs_code text [note: 'Example 8802.60']
  product_trl integer [note: 'Example 7']
  description text [note: 'Example Small satellite platform']
  source_id text [ref: > data_sources.source_id, note: 'Example S002']
  visibility_level visibility_level [not null, default: 'internal']
  review_status review_status [not null, default: 'draft']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table technology_capability {
  tech_id text [pk, note: 'Example T001']
  firm_id text [not null, ref: > firms.firm_id, note: 'Example F001']
  core_technology text [not null, note: 'Example Satellite bus integration']
  trl_level integer [not null, note: 'Example 7']
  rd_expenditure_mthb numeric(14,2) [not null, default: 0, note: 'Example 75.00']
  rd_personnel integer [not null, default: 0, note: 'Example 28']
  patents_count integer [not null, default: 0, note: 'Example 6']
  patent_field text [note: 'Example RF and microwave']
  digitalization_level integer [not null, default: 0, note: 'Example 4']
  source_id text [ref: > data_sources.source_id, note: 'Example S003']
  visibility_level visibility_level [not null, default: 'internal']
  review_status review_status [not null, default: 'draft']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table infrastructure_facility {
  facility_id text [pk, note: 'Example FA001']
  firm_id text [not null, ref: > firms.firm_id, note: 'Example F001']
  testing_lab boolean [not null, default: false, note: 'Example true']
  simulation_tools boolean [not null, default: false, note: 'Example true']
  manufacturing_process text [note: 'Example Cleanroom ISO 8 assembly']
  software_capability text [note: 'Example Embedded flight software']
  source_id text [ref: > data_sources.source_id, note: 'Example S002']
  visibility_level visibility_level [not null, default: 'internal']
  review_status review_status [not null, default: 'draft']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table human_resource_profile {
  hr_id text [pk, note: 'Example H001']
  firm_id text [not null, ref: > firms.firm_id, note: 'Example F001']
  technician_count integer [not null, default: 0, note: 'Example 55']
  skill_specialization text [note: 'Example AIT, structural design']
  training_programs text [note: 'Example ESA partnership program']
  skill_gap text [note: 'Example Senior systems engineers']
  source_id text [ref: > data_sources.source_id, note: 'Example S002']
  visibility_level visibility_level [not null, default: 'internal']
  review_status review_status [not null, default: 'draft']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table supply_chain_linkage {
  linkage_id text [pk, note: 'Example L001']
  firm_id text [not null, ref: > firms.firm_id, note: 'Example F001']
  partner_firm_id text [not null, ref: > firms.firm_id, note: 'Example F002']
  linkage_type linkage_type [not null, note: 'Example Supplier']
  dependency_level integer [not null, default: 0, note: 'Example 4']
  domestic_or_import domestic_or_import [note: 'Example Domestic']
  source_id text [ref: > data_sources.source_id, note: 'Example S002']
  visibility_level visibility_level [not null, default: 'internal']
  review_status review_status [not null, default: 'draft']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (firm_id, partner_firm_id, linkage_type) [unique]
  }
}

Table collaboration_network {
  collab_id text [pk, note: 'Example C001']
  firm_id text [not null, ref: > firms.firm_id, note: 'Example F001']
  partner_type partner_type [not null, note: 'Example University']
  partner_name text [not null, note: 'Example Bangkok Aerospace University']
  collaboration_type collaboration_type [not null, note: 'Example R&D']
  duration_years integer [not null, default: 0, note: 'Example 4']
  source_id text [ref: > data_sources.source_id, note: 'Example S002']
  visibility_level visibility_level [not null, default: 'internal']
  review_status review_status [not null, default: 'draft']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table sustainability_esg {
  esg_id text [pk, note: 'Example E001']
  firm_id text [not null, ref: > firms.firm_id, note: 'Example F001']
  energy_consumption_mwh numeric(14,2) [not null, default: 0, note: 'Example 1800.00']
  renewable_energy_ratio numeric(5,2) [not null, default: 0, note: 'Example 35.00']
  carbon_emission_tco2 numeric(14,2) [not null, default: 0, note: 'Example 720.00']
  waste_management_system boolean [not null, default: false, note: 'Example true']
  esg_certification text [note: 'Example ISO 14001']
  source_id text [ref: > data_sources.source_id, note: 'Example S002']
  visibility_level visibility_level [not null, default: 'internal']
  review_status review_status [not null, default: 'draft']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table vocab_terms {
  vocab_key text [pk, note: 'Example ownership_types']
  term text [pk, note: 'Example Local']
  sort_order integer [not null, default: 0, note: 'Example 0']
  created_at timestamptz [not null, default: `now()`]
}

Table audit_log {
  audit_id text [pk, note: 'Example A001']
  ts timestamptz [not null, default: `now()`, note: 'Example 2025-09-30T08:00:00Z']
  role role_type [not null, note: 'Example Admin']
  action audit_action [not null, note: 'Example import']
  target_table text [not null, note: 'Example firms']
  target_id text [not null, note: 'Example F001']
  summary text [not null, note: 'Example Created firm']
}

Table contracts {
  contract_id serial [pk, note: 'Example 1']
  firm_id text [ref: > firms.firm_id, note: 'Example F001']
  contract_title text [not null, note: 'Example Satellite R&D MOU']
  contract_type text [note: 'Example research']
  contract_status text [note: 'Example active']
  start_date date [note: 'Example 2026-01-01']
  end_date date [note: 'Example 2026-12-31']
  confidentiality_level text [default: 'confidential', note: 'Example confidential']
  file_reference text [note: 'Example s3://bucket/file.pdf']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}
